# splat-bot

./: .env.example  Dockerfile  FEATURES.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  start.sh
bot/: __init__.py  main.py
bot/database/: __init__.py  db.py  models.py
bot/handlers/: __init__.py  quiz.py  start.py  stats.py
bot/keyboards/: __init__.py  inline.py
bot/questions/: __init__.py  cfg_grammar.json  compiler_phases.json  java_basics.json  loader.py  splat_tests.json
bot/utils/: splat_analyzer.py
